# goliath

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  appveyor.yml  build.bat  build.ps1  clean.bat  partiaflowgraph.dot  run.bat  run_test.bat  tests.ps1
cfgtrace/: CMakeLists.txt  api.h  cfgtrace.cpp  control_flow_graph.cpp  control_flow_graph.h  instruction.cpp  instruction.h  node.cpp  node.h
cfgtrace/api/: CMakeLists.txt  types.h
cfgtrace/assembly/: CMakeLists.txt  instruction.cpp  instruction.h
cfgtrace/command/: CMakeLists.txt  execute.cpp  execute.h  graphviz.cpp  graphviz.h
cfgtrace/definition/: CMakeLists.txt  generate.cpp  generate.h
cfgtrace/engine/: CMakeLists.txt  engine.cpp  engine.h  types.h
cfgtrace/error/: CMakeLists.txt  error.h  win32.cpp  win32.h
cfgtrace/format/: CMakeLists.txt  string.h  win32.cpp  win32.h
cfgtrace/graph/: CMakeLists.txt  control_flow.cpp  control_flow.h  graph.cpp  graph.h  node.cpp  node.h
cfgtrace/log/: CMakeLists.txt  log.cpp  log.h
cfgtrace/logger/: CMakeLists.txt  logger.cpp  logger.h
cfgtrace/memory/: CMakeLists.txt  loader.cpp  loader.h  unloader.h
cfgtrace/random/: CMakeLists.txt  random.cpp  random.h
demo/: CMakeCache.txt  CMakeLists.txt  other.cpp  win_version.cpp
demo/sample/: sample.cpp
demo/win_version/: demo.cpp  main.cpp
goliath/: CMakeLists.txt  goliath.cpp
goliath/api/: CMakeLists.txt
goliath/assembly/: CMakeLists.txt  instruction.cpp  instruction.h
goliath/command/: CMakeLists.txt  execute.cpp  execute.h  gdl.cpp  gdl.h  graphviz.cpp  graphviz.h
goliath/definition/: CMakeLists.txt  generate.cpp  generate.h
goliath/engine/: CMakeLists.txt  engine.cpp  engine.h
goliath/error/: CMakeLists.txt  error.h  win32.cpp  win32.h
goliath/format/: CMakeLists.txt  string.h  win32.cpp  win32.h
goliath/graph/: CMakeLists.txt  control_flow.cpp  control_flow.h  graph.cpp  graph.h  node.cpp  node.h
goliath/logger/: CMakeLists.txt  logger.cpp
goliath/memory/: CMakeLists.txt  unloader.cpp
goliath/random/: CMakeLists.txt  random.cpp
include/: cfgtrace.h  goliath.h
src/: api.cpp  api.h  api.hpp  common.cpp  common.hpp  control_flow_graph.cpp  control_flow_graph.h  dbt_trace.cpp  exec.cpp  exec.h  format.cpp  format.h  format.hpp  instruction.cpp  instruction.h  instruction.hpp  log.cpp  log.h  log.hpp  node.cpp  node.h  node.hpp  partial_flow_graph.cpp  partial_flow_graph.hpp  random.cpp  random.h  random.hpp  trace.cpp  trace.hpp  types.hpp  win32_error.cpp  win32_error.h
test/: node.cpp  partial_flow_graph.cpp
test/src/: instruction.cpp  log.cpp  node.cpp  partial_flow_graph.cpp  unitest1.cpp
tests/: CMakeLists.txt  catch_extra_matchers.h  cfgtrace.cpp  cfgtrace_test.cpp  custom_params.h  fake_output_streamer.cpp  fake_output_streamer.h  goliath.cpp  logger.cpp  logger_test.cpp  machinery.cpp  machinery.h  main.cpp  plugin_layer.cpp  plugin_layer.h  plugin_report.h  run.cpp  virtual_memory.cpp  virtual_memory.h
tests/test/: CMakeLists.txt  catch_extra_matchers.h  custom_params.cpp  custom_params.h  fake_definition.cpp  fake_definition.h  fake_graph.cpp  fake_graph.h  fake_output_streamer.cpp  fake_output_streamer.h  plugin_layer.cpp  plugin_layer.h  plugin_report.cpp  plugin_report.h  virtual_memory.cpp  virtual_memory.h
