target_sources(cfgtrace 
	PRIVATE
		${CMAKE_CURRENT_SOURCE_DIR}/control_flow_graph.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/control_flow_graph.h
		${CMAKE_CURRENT_SOURCE_DIR}/instruction.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/instruction.h
		${CMAKE_CURRENT_SOURCE_DIR}/node.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/node.h
)
add_subdirectory(command)
add_subdirectory(engine)
add_subdirectory(error)
add_subdirectory(format)
add_subdirectory(logger)
add_subdirectory(random)